--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.veltrix">
 
     <application
         android:allowBackup="true"
@@ -11,11 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Veltrix">
+
+        <!-- internal-only activity (not exported) -->
         <activity
             android:name=".whatsappInitiation"
             android:exported="false"
             android:label="@string/title_activity_whatsapp_initiation"
             android:theme="@style/Theme.Veltrix" />
+
+        <!-- launcher -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,10 +28,9 @@
             android:theme="@style/Theme.Veltrix">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+    </application>
 </manifest>
